# rag-implementation-for-own-data

./: README.md  main.py  pyproject.toml  requirements.txt
src/: 1.0_RAG_With_Own_Text.ipynb  4.0_Docker_Model_Runner.ipynb  app.py
src/chroma_db/: chroma.sqlite3
